{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "e7b1ee0e-4689-4f05-9115-9b2431edf134",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "ec31c5a8-f98a-4d8c-8667-fa66e0a6aa4d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "13b9c620-dabc-4f12-a90b-f1fdac34f6a0",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Dash",
                    "type": "Button",
                    "id": "6a4370f4-fb4b-44c5-850a-b8707c03412a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "092fbfb6-5ce6-4604-b2ff-7aac7dca23b9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Roll",
                    "type": "Value",
                    "id": "ef8f477a-3b8e-4184-99ee-135053f70317",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LightToggle",
                    "type": "Button",
                    "id": "e24ebc31-e2cd-49f9-b018-92aeca239749",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": false
                },
                {
                    "name": "PageFlipNav",
                    "type": "Value",
                    "id": "0660056f-b13d-4ed4-abd8-bd813e9bd941",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "79a8296e-895f-4a50-954b-0b6db86af7e1",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Compen",
                    "type": "Button",
                    "id": "def41a1a-31ba-4ae0-9ddf-7f247c27309c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Magic",
                    "type": "Button",
                    "id": "63628836-0f51-4685-8019-b092cad2508b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SoundL",
                    "type": "Button",
                    "id": "e4d40615-964e-43ad-8330-7f83fd394872",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SoundR",
                    "type": "Button",
                    "id": "f42c464a-4194-4742-941e-0fd887f37abb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "47726819-7d89-4690-90d1-26df378a3bd2",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "StickDeadzone",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "KeyBoard",
                    "id": "62455088-9fc6-4469-bb80-2ba59d2c1df9",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "ScaleVector2",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "362b0723-a570-4d9c-8663-681657cdf919",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "000eeef3-90c1-45ae-87b3-d207cd4b5ec6",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d0f00308-f56b-488c-9b7c-03763008282d",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "1661c473-3ef1-4a1c-aa69-f4bba5ad4f89",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0ac0e392-5783-4d43-a7f1-d0fe49701f9f",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6eb015d7-21a3-4aae-b504-c22ad941bd6e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a2c5581-9aa2-4907-9df9-a3fa97f5d478",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2be9c033-809a-4c72-a140-9e420be0e6c2",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a4acfb9d-095b-4e50-9e85-e715437f97e3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Dash",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0d95a85d-d210-464b-be14-37c4c7658c4b",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d7f2f773-8f6d-42c6-b645-49815f73b50e",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9c55be99-0bcb-4c11-8d89-9e8c18806451",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f207f416-17d6-4947-a6c7-93bcfc26af6d",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Roll",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e655f491-479e-4aeb-8c0d-05920fe0308e",
                    "path": "<Gamepad>/leftStickPress",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "LightToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6aa8f2c5-15e9-4bf8-a712-8718ecd2fc32",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7e14bc91-268c-4acf-be61-63fe0eeb0946",
                    "path": "<Gamepad>/dpad",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7735021e-20c9-4bff-8d04-596d9847c95e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "e19c32b4-4a3a-4821-9ce9-75980bcf3d1d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "184cd52c-4002-41e2-846c-3d04f92d73b3",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "b96efb43-69f5-4bb1-8dbd-e4372cdca154",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "d9767184-468b-41d2-ac9c-7bfdfba2b284",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "e1eb1ea5-d832-4ef6-b1e8-46acb09fb3a8",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "5c99a6b3-6f26-46a1-9dd1-ad14cc785a85",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0176c1ed-40a6-4e7f-80ea-6dd14ed4b437",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "883f1ec9-e0a7-4407-aa7b-f4828f4e1410",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b0a10e2f-7d44-47fc-8e91-6174a49cd171",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "71a00d39-35a9-42c6-a8ec-f275ca9c819e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PageFlipNav",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "be28f70a-cb2b-48c1-b1c6-33b1b58e4db2",
                    "path": "<XInputController>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "61254f1b-1850-4329-9c4b-399b35240245",
                    "path": "<Gamepad>/start",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c00eb823-6551-4404-92b9-687af58f64db",
                    "path": "<XInputController>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Compen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5a4b1f8e-20b2-4070-a5f7-9fc6a0c76863",
                    "path": "<Gamepad>/select",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Compen",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b24889a0-032c-4125-b344-b20a1e777d42",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3761bd16-4e9e-4915-b05d-0c0aeaf7c9ce",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "337ebd07-853c-49cb-9f9e-705992158fcc",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Magic",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "13286403-f583-43fb-b851-0c0e941cfd23",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2d0a2d6-40fd-4dc9-a4da-d7b04701f789",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a497cf51-7db4-4b9a-ad39-2eb24caa1b0c",
                    "path": "<DualShockGamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4ed33863-6eca-4924-93b1-2ddd766326d7",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "407518cf-ee56-4027-840f-7298041fcf19",
                    "path": "<DualShockGamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "fea797e3-0cba-4b84-81f4-a876ce1868ac",
                    "path": "<XInputController>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundL",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3ad0a902-31bb-40a0-a522-634cb4ac931b",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b914b4f-f208-4a2a-b2a1-89f43821847c",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6342bb58-7d8c-4675-8cab-a5d58cb96fb5",
                    "path": "<DualShockGamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "86e41493-b7fe-4e4d-a7dd-9c5b369c0103",
                    "path": "<XInputController>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9346e434-97f7-4814-a985-7f1bb934e28c",
                    "path": "<DualShockGamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "95496d37-6059-4b91-be51-06819b4e86b2",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "SoundR",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}